# chord_mapper

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/grammars/: chord.pest
tests/: bare_note_test.rs  chord_mapping_test.rs  flatted_note_test.rs  grammat_test.rs  sharped_note_test.rs
