[package]
name = "chord_mapper"
version = "0.1.2"
edition = "2021"
description = "Chord Mapper is a Rust project that provides a command-line utility for parsing chord notations and mapping them to the individual musical notes they consist of. "
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = "4.4.7"
pest = "2.6"
pest_derive = "2.6"
